--- a/careerlyclonefrontend/package.json
+++ b/careerlyclonefrontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.2.21",
     "axios": "^1.7.2",
     "mobx": "^6.12.3",
+    "mobx-react": "^9.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
