--- a/careerlyclonefrontend/package.json
+++ b/careerlyclonefrontend/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/joy": "^5.0.0-beta.48",
+    "@mui/material": "^5.16.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,10 +16,12 @@
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "axios": "^1.7.2",
+    "draft-js": "^0.11.7",
     "mobx": "^6.12.3",
     "mobx-react": "^9.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "sass": "^1.72.0",
@@ -47,6 +54,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
+    "@types/draft-js": "^0.11.18",
     "@types/react-router-dom": "^5.3.3",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
